WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248108
AX: Dynamic aria-disabled changes don't update AXPropertyName::IsEnabled for descendants
https://bugs.webkit.org/show_bug.cgi?id=248108
Summary
AX: Dynamic aria-disabled changes don't update AXPropertyName::IsEnabled for ...
Tyler Wilcock
Reported
2022-11-18 16:06:33 PST
https://w3c.github.io/aria/#aria-disabled
> The state of being disabled applies to the element with aria-disabled and all focusable descendant elements of the element on which the aria-disabled attribute is applied.
Attachments
Patch
(26.41 KB, patch)
2022-11-18 16:12 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(26.41 KB, patch)
2022-11-28 10:13 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-18 16:06:43 PST
<
rdar://problem/102534000
>
Tyler Wilcock
Comment 2
2022-11-18 16:12:27 PST
Created
attachment 463616
[details]
Patch
chris fleizach
Comment 3
2022-11-27 23:05:35 PST
Comment on
attachment 463616
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=463616&action=review
> COMMIT_MESSAGE:9 > +its descendants, too. This is required becaues aria-disabled also
because
Tyler Wilcock
Comment 4
2022-11-28 10:13:44 PST
Created
attachment 463763
[details]
Patch
EWS
Comment 5
2022-11-29 20:51:50 PST
Committed
257159@main
(e113b29b327f): <
https://commits.webkit.org/257159@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463763
[details]
.
Fujii Hironori
Comment 6
2023-01-10 22:34:06 PST
Comment on
attachment 463763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=463763&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:414 > + AXLOG(makeString("Updating properties ", properties, " for objectID ", axObject.objectID().loggingString()));
Does this code generate an expected log string for `properties`?
Tyler Wilcock
Comment 7
2023-01-10 22:45:55 PST
(In reply to Fujii Hironori from
comment #6
)
> Comment on
attachment 463763
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=463763&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:414 > > + AXLOG(makeString("Updating properties ", properties, " for objectID ", axObject.objectID().loggingString())); > > Does this code generate an expected log string for `properties`?
Nope. Noticed that but haven't got around to fixing it yet.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug