AX: Dynamic aria-disabled changes don't update AXPropertyName::IsEnabled for descendants https://bugs.webkit.org/show_bug.cgi?id=248108 rdar://problem/102534000

Reviewed by Chris Fleizach.

With this patch, when an object's disabled state changes, we now update
AXPropertyName::IsEnabled and AXPropertyName::CanSetFocusAttribute for
its descendants, too. This is required because aria-disabled also
disables all descendants:

https://w3c.github.io/aria/#aria-disabled

> The state of being disabled applies to the element with aria-disabled and
all focusable descendant elements of the element on which the aria-disabled
attribute is applied.

* LayoutTests/accessibility/dynamic-attribute-changes-should-update-isenabled-expected.txt:
* LayoutTests/accessibility/dynamic-attribute-changes-should-update-isenabled.html:
* LayoutTests/resources/accessibility-helper.js:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updatePropertiesForSelfAndDescendants):
(WebCore::AXIsolatedTree::updateNodeProperties):
(WebCore::AXIsolatedTree::updateNodeProperty):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.h:
(WebCore::AXIsolatedTree::updateNodeProperty):

Canonical link: https://commits.webkit.org/257159@main