Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp
@@ -398,110 +398,125 @@ void AXIsolatedTree::updateNode(AXCoreObject& axObject)
     }
 }
 
-void AXIsolatedTree::updateNodeProperty(AXCoreObject& axObject, AXPropertyName property)
+void AXIsolatedTree::updatePropertiesForSelfAndDescendants(AXCoreObject& axObject, const Vector<AXPropertyName>& properties)
+{
+    ASSERT(isMainThread());
+    ASSERT(is<AccessibilityObject>(axObject));
+
+    Accessibility::enumerateDescendants<AXCoreObject>(axObject, true, [&properties, this] (auto& descendant) {
+        updateNodeProperties(descendant, properties);
+    });
+}
+
+void AXIsolatedTree::updateNodeProperties(AXCoreObject& axObject, const Vector<AXPropertyName>& properties)
 {
     AXTRACE("AXIsolatedTree::updateNodeProperty"_s);
-    AXLOG(makeString("Update property ", property, " for objectID ", axObject.objectID().loggingString()));
+    AXLOG(makeString("Updating properties ", properties, " for objectID ", axObject.objectID().loggingString()));
     ASSERT(isMainThread());
 
     AXPropertyMap propertyMap;
-    switch (property) {
-    case AXPropertyName::ARIATreeItemContent:
-        propertyMap.set(AXPropertyName::ARIATreeItemContent, axIDs(axObject.ariaTreeItemContent()));
-        break;
-    case AXPropertyName::ARIATreeRows: {
-        AXCoreObject::AccessibilityChildrenVector ariaTreeRows;
-        axObject.ariaTreeRows(ariaTreeRows);
-        propertyMap.set(AXPropertyName::ARIATreeRows, axIDs(ariaTreeRows));
-        break;
+    for (const auto& property : properties) {
+        switch (property) {
+        case AXPropertyName::ARIATreeItemContent:
+            propertyMap.set(AXPropertyName::ARIATreeItemContent, axIDs(axObject.ariaTreeItemContent()));
+            break;
+        case AXPropertyName::ARIATreeRows: {
+            AXCoreObject::AccessibilityChildrenVector ariaTreeRows;
+            axObject.ariaTreeRows(ariaTreeRows);
+            propertyMap.set(AXPropertyName::ARIATreeRows, axIDs(ariaTreeRows));
+            break;
+        }
+        case AXPropertyName::ValueAutofillButtonType:
+            propertyMap.set(AXPropertyName::ValueAutofillButtonType, static_cast<int>(axObject.valueAutofillButtonType()));
+            propertyMap.set(AXPropertyName::IsValueAutofillAvailable, axObject.isValueAutofillAvailable());
+            break;
+        case AXPropertyName::AXColumnCount:
+            propertyMap.set(AXPropertyName::AXColumnCount, axObject.axColumnCount());
+            break;
+        case AXPropertyName::ColumnHeaders:
+            propertyMap.set(AXPropertyName::ColumnHeaders, axIDs(axObject.columnHeaders()));
+            break;
+        case AXPropertyName::AXColumnIndex:
+            propertyMap.set(AXPropertyName::AXColumnIndex, axObject.axColumnIndex());
+            break;
+        case AXPropertyName::CanSetFocusAttribute:
+            propertyMap.set(AXPropertyName::CanSetFocusAttribute, axObject.canSetFocusAttribute());
+            break;
+        case AXPropertyName::CanSetValueAttribute:
+            propertyMap.set(AXPropertyName::CanSetValueAttribute, axObject.canSetValueAttribute());
+            break;
+        case AXPropertyName::CurrentState:
+            propertyMap.set(AXPropertyName::CurrentState, static_cast<int>(axObject.currentState()));
+            break;
+        case AXPropertyName::DisclosedRows:
+            propertyMap.set(AXPropertyName::DisclosedRows, axIDs(axObject.disclosedRows()));
+            break;
+        case AXPropertyName::IdentifierAttribute:
+            propertyMap.set(AXPropertyName::IdentifierAttribute, axObject.identifierAttribute().isolatedCopy());
+            break;
+        case AXPropertyName::IsChecked:
+            ASSERT(axObject.supportsCheckedState());
+            propertyMap.set(AXPropertyName::IsChecked, axObject.isChecked());
+            propertyMap.set(AXPropertyName::ButtonState, axObject.checkboxOrRadioValue());
+            break;
+        case AXPropertyName::IsEnabled:
+            propertyMap.set(AXPropertyName::IsEnabled, axObject.isEnabled());
+            break;
+        case AXPropertyName::IsExpanded:
+            propertyMap.set(AXPropertyName::IsExpanded, axObject.isExpanded());
+            break;
+        case AXPropertyName::IsRequired:
+            propertyMap.set(AXPropertyName::IsRequired, axObject.isRequired());
+            break;
+        case AXPropertyName::IsSelected:
+            propertyMap.set(AXPropertyName::IsSelected, axObject.isSelected());
+            break;
+        case AXPropertyName::MaxValueForRange:
+            propertyMap.set(AXPropertyName::MaxValueForRange, axObject.maxValueForRange());
+            break;
+        case AXPropertyName::MinValueForRange:
+            propertyMap.set(AXPropertyName::MinValueForRange, axObject.minValueForRange());
+            break;
+        case AXPropertyName::Orientation:
+            propertyMap.set(AXPropertyName::Orientation, static_cast<int>(axObject.orientation()));
+            break;
+        case AXPropertyName::PosInSet:
+            propertyMap.set(AXPropertyName::PosInSet, axObject.posInSet());
+            break;
+        case AXPropertyName::ReadOnlyValue:
+            propertyMap.set(AXPropertyName::ReadOnlyValue, axObject.readOnlyValue().isolatedCopy());
+            break;
+        case AXPropertyName::RoleDescription:
+            propertyMap.set(AXPropertyName::RoleDescription, axObject.roleDescription().isolatedCopy());
+            break;
+        case AXPropertyName::AXRowIndex:
+            propertyMap.set(AXPropertyName::AXRowIndex, axObject.axRowIndex());
+            break;
+        case AXPropertyName::SetSize:
+            propertyMap.set(AXPropertyName::SetSize, axObject.setSize());
+            break;
+        case AXPropertyName::SortDirection:
+            propertyMap.set(AXPropertyName::SortDirection, static_cast<int>(axObject.sortDirection()));
+            break;
+        case AXPropertyName::SupportsPosInSet:
+            propertyMap.set(AXPropertyName::SupportsPosInSet, axObject.supportsPosInSet());
+            break;
+        case AXPropertyName::SupportsSetSize:
+            propertyMap.set(AXPropertyName::SupportsSetSize, axObject.supportsSetSize());
+            break;
+        case AXPropertyName::URL:
+            propertyMap.set(AXPropertyName::URL, axObject.url().isolatedCopy());
+            break;
+        case AXPropertyName::ValueForRange:
+            propertyMap.set(AXPropertyName::ValueForRange, axObject.valueForRange());
+            break;
+        default:
+            break;
+        }
     }
-    case AXPropertyName::ValueAutofillButtonType:
-        propertyMap.set(AXPropertyName::ValueAutofillButtonType, static_cast<int>(axObject.valueAutofillButtonType()));
-        propertyMap.set(AXPropertyName::IsValueAutofillAvailable, axObject.isValueAutofillAvailable());
-        break;
-    case AXPropertyName::AXColumnCount:
-        propertyMap.set(AXPropertyName::AXColumnCount, axObject.axColumnCount());
-        break;
-    case AXPropertyName::ColumnHeaders:
-        propertyMap.set(AXPropertyName::ColumnHeaders, axIDs(axObject.columnHeaders()));
-        break;
-    case AXPropertyName::AXColumnIndex:
-        propertyMap.set(AXPropertyName::AXColumnIndex, axObject.axColumnIndex());
-        break;
-    case AXPropertyName::CanSetFocusAttribute:
-        propertyMap.set(AXPropertyName::CanSetFocusAttribute, axObject.canSetFocusAttribute());
-        break;
-    case AXPropertyName::CanSetValueAttribute:
-        propertyMap.set(AXPropertyName::CanSetValueAttribute, axObject.canSetValueAttribute());
-        break;
-    case AXPropertyName::CurrentState:
-        propertyMap.set(AXPropertyName::CurrentState, static_cast<int>(axObject.currentState()));
-        break;
-    case AXPropertyName::DisclosedRows:
-        propertyMap.set(AXPropertyName::DisclosedRows, axIDs(axObject.disclosedRows()));
-        break;
-    case AXPropertyName::IdentifierAttribute:
-        propertyMap.set(AXPropertyName::IdentifierAttribute, axObject.identifierAttribute().isolatedCopy());
-        break;
-    case AXPropertyName::IsChecked:
-        ASSERT(axObject.supportsCheckedState());
-        propertyMap.set(AXPropertyName::IsChecked, axObject.isChecked());
-        propertyMap.set(AXPropertyName::ButtonState, axObject.checkboxOrRadioValue());
-        break;
-    case AXPropertyName::IsEnabled:
-        propertyMap.set(AXPropertyName::IsEnabled, axObject.isEnabled());
-        break;
-    case AXPropertyName::IsExpanded:
-        propertyMap.set(AXPropertyName::IsExpanded, axObject.isExpanded());
-        break;
-    case AXPropertyName::IsRequired:
-        propertyMap.set(AXPropertyName::IsRequired, axObject.isRequired());
-        break;
-    case AXPropertyName::IsSelected:
-        propertyMap.set(AXPropertyName::IsSelected, axObject.isSelected());
-        break;
-    case AXPropertyName::MaxValueForRange:
-        propertyMap.set(AXPropertyName::MaxValueForRange, axObject.maxValueForRange());
-        break;
-    case AXPropertyName::MinValueForRange:
-        propertyMap.set(AXPropertyName::MinValueForRange, axObject.minValueForRange());
-        break;
-    case AXPropertyName::Orientation:
-        propertyMap.set(AXPropertyName::Orientation, static_cast<int>(axObject.orientation()));
-        break;
-    case AXPropertyName::PosInSet:
-        propertyMap.set(AXPropertyName::PosInSet, axObject.posInSet());
-        break;
-    case AXPropertyName::ReadOnlyValue:
-        propertyMap.set(AXPropertyName::ReadOnlyValue, axObject.readOnlyValue().isolatedCopy());
-        break;
-    case AXPropertyName::RoleDescription:
-        propertyMap.set(AXPropertyName::RoleDescription, axObject.roleDescription().isolatedCopy());
-        break;
-    case AXPropertyName::AXRowIndex:
-        propertyMap.set(AXPropertyName::AXRowIndex, axObject.axRowIndex());
-        break;
-    case AXPropertyName::SetSize:
-        propertyMap.set(AXPropertyName::SetSize, axObject.setSize());
-        break;
-    case AXPropertyName::SortDirection:
-        propertyMap.set(AXPropertyName::SortDirection, static_cast<int>(axObject.sortDirection()));
-        break;
-    case AXPropertyName::SupportsPosInSet:
-        propertyMap.set(AXPropertyName::SupportsPosInSet, axObject.supportsPosInSet());
-        break;
-    case AXPropertyName::SupportsSetSize:
-        propertyMap.set(AXPropertyName::SupportsSetSize, axObject.supportsSetSize());
-        break;
-    case AXPropertyName::URL:
-        propertyMap.set(AXPropertyName::URL, axObject.url().isolatedCopy());
-        break;
-    case AXPropertyName::ValueForRange:
-        propertyMap.set(AXPropertyName::ValueForRange, axObject.valueForRange());
-        break;
-    default:
+
+    if (propertyMap.isEmpty())
         return;
-    }
 
     Locker locker { m_changeLogLock };
     m_pendingPropertyChanges.append({ axObject.objectID(), propertyMap });
